--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><title>About me</title><link rel="stylesheet" href="blog.css">
+    <head><title>About Me</title><link rel="stylesheet" href="blog.css">
         <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="favicon.ico"/>
     </head>
     <body>
@@ -12,7 +12,7 @@
         <img class="special" src="content/float.png" alt="Image 3">
         </div>
         <div style="text-align: center;">
-        <a href="mailto:owensummersett@gmail.com" class="email-button">Contact me</a>
+        <a href="mailto:owensummersett@gmail.com" class="aboutButtn">Contact me</a>
     </div>
         </body>
 </html>
