--- a/digitalArt.html
+++ b/digitalArt.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head><title>OS Portfolio</title><link rel="stylesheet" href="blog.css"></head>
+    <head><title>OS Portfolio</title><link rel="stylesheet" href="blog.css"> <link rel="icon" type="image/x-icon" href="favicon.ico"></head>
     <body>
         <h1>Art Portfolio by Owen Summersett</h1>
         <div style="text-align: center;">
-        <a href="about.html">About me</a>
+        <a class="aboutButtn" href="about.html">About me</a>
         </div>
         <h3></h3>
         <div style="text-align: center;">
-        <img class="separator" src="content/dino.png" alt="Image 4">
+        <img class="separator" src="content/dino.png" alt="Image 4" title="Modeled in blender 3D">
         </div>
         <div class="gallery" style="text-align: center">
-            <img src="content/cube_roll.gif" alt="Image 1">
-            <img src="content/cubepurple.gif" alt="Image 2">
-            <img src="content/tracker.gif" alt="Image 3">
+            <img src="content/cube_roll.gif" alt="Image 1" title="Texturing and animation practice in Blender 3D">
+            <img src="content/cubepurple.gif" alt="Image 2" title="Animated and modeled in Blender 3D">
+            <img src="content/tracker.gif" alt="Image 3" title="Camera tracking project using Blender 3D">
         </div>
         <div style="text-align: center;">
-        <img class="separator" src="content/final3.png" alt="Image 4">
+        <img class="separator" src="content/final3.png" alt="Image 4" title="Modeled in Blender 3D">
         </div>
         <div class="gallery" style="text-align: center">
-            <img src="content/glassfall.gif" alt="Image 4">
+            <img src="content/glassfall.gif" alt="Image 4" title="Physics engine practice">
             <img src="content/purple.gif" alt="Image 5">
-            <img src="content/particle.gif" alt="Image 6">
+            <img src="content/particle.gif" alt="Image 6" title="Particle system practice using Blender 3D">
         </div>
         <div style="text-align: center;">
-            <img class="separator" src="content/finaltime.gif" alt="Image 4">
+            <img class="separator" src="content/finaltime.gif" alt="Image 4" title="Animation project in Adobe After Effects">
             </div>
             <div class="gallery" style="text-align: center">
-            <img src="content/18 - jelly.gif" alt="Image 4">
-            <img src="content/viewport3.png" alt="Image 5">
-            <img src="content/23 - crystals0001-0130.gif" alt="Image 6">
+            <img src="content/18 - jelly.gif" alt="Image 4" title="Physics practice using Blender 3D">
+            <img src="content/viewport3.png" alt="Image 5" title="Light reflections practice using Blender 3D">
+            <img src="content/23 - crystals0001-0130.gif" alt="Image 6" title="Animation practice usin Blender 3D">
         </div>
         <div style="text-align: center;">
-            <img class="separator" src="content/untitled.png" alt="Image 4">
+            <img class="separator" src="content/untitled.png" alt="Image 4" title="'Valuable' digital art project using Blender 3D">
             </div>
             <div class="gallery" style="text-align: center">
-            <img src="content/FIRST RENDER.jpg" alt="Image 4">
-            <img src="content/untitled_edited.png" alt="Image 5">
-            <img src="content/backgroud 2.png" alt="Image 6">
+            <img src="content/FIRST RENDER.jpg" alt="Image 4" title="Landscape texturing practice">
+            <img src="content/untitled_edited.png" alt="Image 5" title="Logo project">
+            <img src="content/backgroud 2.png" alt="Image 6" title="Landscape texturing and lighting practice">
         </div>
         <div style="text-align: center;">
-            <img class="separator" src="content/06 - V_3.gif" alt="Image 4">
+            <img class="separator" src="content/06 - V_3.gif" alt="Image 4" title="Animated intro project">
         </div>
 </body>
 </html>
