--- a/digitalArt.html
+++ b/digitalArt.html
@@ -4,7 +4,7 @@
     <body>
         <h1>Art Portfolio by Owen Summersett</h1>
         <div style="text-align: center;">
-        <a class="aboutButtn" href="about.html">About me</a>
+        <a class="aboutButtn" href="about.html">About Me</a>
         </div>
         <h3></h3>
         <div style="text-align: center;">
