--- a/digitalArt.html
+++ b/digitalArt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><title>OS Portfolio</title><link rel="stylesheet" href="blog.css"> <link rel="icon" type="image/x-icon" href="favicon.ico"></head>
+    <head><title>OS Portfolio</title><link rel="stylesheet" href="blog.css"> <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="favicon.ico"/></head>
     <body>
         <h1>Art Portfolio by Owen Summersett</h1>
         <div style="text-align: center;">
