--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <body>
         <h1>About me</h1>
         <div style="text-align: center;">
-        <p>Hello and thank you for checking out my art! <br> I have been using blender 3D since my passion for digital art and 3D animation sparked in 2018. I am entirely self taught off youtube as I imagine most digital artisits start :) As I moved off to college, my interest shifted more towards computer science. My hope is to one day be able to use my knowlege in both subjects to make more exciting and interactive projects.
+        <p>Hello and thank you for checking out my art! <br> I have been using Blender 3D since my passion for digital art and 3D animation sparked in 2018. I am entirely self-taught on YouTube, as I imagine most digital artists start. As I moved off to college, my interest shifted more towards computer science. My hope is to one day be able to use my knowledge in both subjects to make more exciting and interactive projects.
             <br> Click <a href="digitalArt.html">here</a> to go back to my portfolio.
         </p>
         <img class="special" src="content/float.png" alt="Image 3">
